# dcmtk-hello

./: .dir-locals.el  .envrc  CMakeLists.txt  run-cmake.sh
src/: main.cpp
